--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
 	"name": "quaesitor",
 	"version": "1.0.0",
 	"description": "a utility for finding Latin scientific within vernacular text",
-	"main": "dist/index.js",
+	"main": "dist/quaesitor-node.js",
+	"browser": "dist/quaesitor-browser.js",
 	"types": "dist/src/index.d.ts",
 	"scripts": {
 		"build": "webpack --config webpack.config.js --mode production",
@@ -33,30 +34,33 @@
 		"@babel/preset-env": "^7.4.1",
 		"@babel/preset-typescript": "^7.3.3",
 		"@types/jasmine": "^3.3.13",
+		"@types/lodash": "^4.14.137",
+		"@types/node": "^12.7.2",
+		"@types/xregexp": "^3.0.30",
 		"awesome-typescript-loader": "5.2.0",
-		"file-loader": "^4.2.0",
+		"copy-webpack-plugin": "^5.0.4",
 		"jasmine-core": "~3.4.0",
 		"karma": "^4.1.0",
 		"karma-jasmine": "^2.0.1",
 		"karma-phantomjs-launcher": "1.0.4",
 		"karma-webpack": "3.0.0",
+		"lodash": "^4.17.15",
 		"source-map-loader": "0.2.3",
 		"tslint": "^5.19.0",
 		"tslint-loader": "3.6.0",
 		"typescript": "^3.5.0",
 		"webpack": "4.12.0",
 		"webpack-cli": "3.0.8",
-		"webpack-dev-server": "^3.8.0"
+		"webpack-dev-server": "^3.8.0",
+		"webpack-node-externals": "^1.7.2",
+		"webpack-preprocessor-loader": "git+https://github.com/Ramzeus/webpack-preprocessor-loader.git"
 	},
 	"files": [
 		"dist/*"
 	],
 	"dependencies": {
 		"@tensorflow/tfjs": "^1.2.6",
-		"@types/lodash": "^4.14.137",
-		"@types/node": "^12.7.2",
-		"@types/xregexp": "^3.0.30",
-		"lodash": "^4.17.15",
+		"@tensorflow/tfjs-node": "^1.2.8",
 		"mem": "^4.0.0",
 		"mnemonist": "^0.30.0",
 		"xregexp": "^4.2.4",
