--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
 			"es2018",
 			"dom"
 		],
-		"module": "commonjs",
+		"module": "ES2015",
 		"moduleResolution": "node",
 		"noFallthroughCasesInSwitch": true,
 		"noImplicitAny": true,
@@ -21,7 +21,7 @@
 		"preserveConstEnums": true,
 		"removeComments": true,
 		"sourceMap": true,
-		"target": "es2016"
+		"target": "es2015"
 	},
 	"include": [
 		"src/"
