--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "quaesitor",
-	"version": "1.0.8",
+	"version": "1.0.9",
 	"description": "a utility for finding Latin scientific within vernacular text",
 	"main": "dist/quaesitor-node.js",
 	"browser": "dist/quaesitor-browser.js",
@@ -27,46 +27,46 @@
 	},
 	"homepage": "https://github.com/dpl10/quaesitor#readme",
 	"devDependencies": {
-		"@babel/cli": "^7.8.4",
-		"@babel/core": "^7.8.7",
-		"@babel/plugin-proposal-class-properties": "^7.8.3",
-		"@babel/plugin-proposal-object-rest-spread": "^7.8.3",
-		"@babel/preset-env": "^7.8.7",
-		"@babel/preset-typescript": "^7.8.3",
-		"@tensorflow/tfjs": "^1.7.0",
-		"@tensorflow/tfjs-node": "^1.7.0",
-		"@types/jasmine": "^3.5.9",
-		"@types/lodash": "^4.14.149",
-		"@types/node": "^13.9.0",
+		"@babel/cli": "^7.10.5",
+		"@babel/core": "^7.10.5",
+		"@babel/plugin-proposal-class-properties": "^7.10.4",
+		"@babel/plugin-proposal-object-rest-spread": "^7.10.4",
+		"@babel/preset-env": "^7.10.4",
+		"@babel/preset-typescript": "^7.10.4",
+		"@tensorflow/tfjs": "^2.0.1",
+		"@tensorflow/tfjs-node": "^2.0.1",
+		"@types/jasmine": "^3.5.11",
+		"@types/lodash": "^4.14.157",
+		"@types/node": "^14.0.24",
 		"@types/pbf": "^3.0.2",
-		"@types/xregexp": "^3.0.30",
-		"awesome-typescript-loader": "5.2.1",
-		"copy-webpack-plugin": "^5.1.1",
+		"@types/xregexp": "^4.3.0",
+		"copy-webpack-plugin": "^6.0.3",
 		"jasmine-core": "~3.5.0",
-		"karma": "^4.4.1",
-		"karma-jasmine": "^3.1.1",
+		"karma": "^5.1.0",
+		"karma-jasmine": "^3.3.1",
 		"karma-phantomjs-launcher": "1.0.4",
 		"karma-webpack": "4.0.2",
-		"source-map-loader": "0.2.4",
-		"tslint": "^6.1.0",
-		"tslint-loader": "3.6.0",
-		"typescript": "^3.8.3",
-		"webpack": "^4.42.0",
-		"webpack-cli": "3.3.11",
-		"webpack-dev-server": "^3.10.3",
-		"webpack-node-externals": "^1.7.2",
+		"source-map-loader": "1.0.1",
+		"ts-loader": "^8.0.1",
+		"tslint": "^6.1.2",
+		"tslint-webpack-plugin": "^2.1.0",
+		"typescript": "^3.9.7",
+		"webpack": "^4.43.0",
+		"webpack-cli": "3.3.12",
+		"webpack-dev-server": "^3.11.0",
+		"webpack-node-externals": "^2.5.0",
 		"webpack-preprocessor-loader": "git+https://github.com/Ramzeus/webpack-preprocessor-loader.git"
 	},
 	"files": [
 		"dist/*"
 	],
 	"dependencies": {
-		"downsample": "^1.0.3",
-		"lodash": "^4.17.15",
-		"mem": "^6.0.1",
-		"mnemonist": "^0.32.0",
+		"downsample": "^1.3.0",
+		"lodash": "^4.17.19",
+		"mem": "^6.1.0",
+		"mnemonist": "^0.38.0",
 		"pbf": "^3.2.1",
 		"xregexp": "^4.3.0",
-		"xxhash-wasm": "^0.3.1"
+		"xxhash-wasm": "^0.4.0"
 	}
 }
