--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,18 +15,19 @@
 		"noImplicitAny": true,
 		"noImplicitReturns": true,
 		"noImplicitThis": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true,
+		"noUnusedLocals": false,
+		"noUnusedParameters": false,
 		"outDir": "./dist",
 		"preserveConstEnums": true,
 		"removeComments": true,
+		"skipLibCheck": true,
 		"sourceMap": true,
 		"target": "es2015"
 	},
-	"include": [
-		"src/"
-	],
 	"exclude": [
 		"node_modules"
+	],
+	"include": [
+		"src/"
 	]
 }
