--- a/package.json
+++ b/package.json
@@ -1,20 +1,14 @@
 {
 	"name": "quaesitor",
-	"version": "1.0.10",
+	"version": "1.1.0",
 	"description": "a utility for finding Latin scientific within vernacular text",
 	"main": "dist/quaesitor-node.js",
 	"browser": "dist/quaesitor-browser.js",
-	"types": "dist/src/index.d.ts",
+	"types": "dist/quaesitor.d.ts",
+	"type": "module",
 	"scripts": {
-		"build": "webpack --config webpack.config.js --mode production",
-		"build.all": "npm run build.prod && npm run build.esnext",
-		"build.esnext": "npm run build:types && npm run build:js",
-		"build.prod": "webpack --config webpack.config.js -p",
-		"build:js": "babel src --out-dir dist --extensions \".ts,.tsx\" --source-maps inline",
-		"build:types": "tsc --emitDeclarationOnly",
-		"lint": "tslint -p tsconfig.json",
-		"start": "webpack-dev-server --port 9000 --inline --progress --profile --colors --watch --content-base src/ --mode development",
-		"test": "karma start karma.config.js"
+		"build": "./esbuild.mjs && sed -i 's/tfjs-node/tfjs/g' dist/quaesitor-browser.js* && tsc --emitDeclarationOnly --outDir dist",
+		"lint": "tslint -p tsconfig.json"
 	},
 	"repository": {
 		"type": "git",
@@ -26,48 +20,27 @@
 		"url": "https://github.com/dpl10/quaesitor/issues"
 	},
 	"homepage": "https://github.com/dpl10/quaesitor#readme",
-	"devDependencies": {
-		"@babel/cli": "^7.11.6",
-		"@babel/core": "^7.11.6",
-		"@babel/plugin-proposal-class-properties": "^7.10.4",
-		"@babel/plugin-proposal-object-rest-spread": "^7.11.0",
-		"@babel/preset-env": "^7.11.5",
-		"@babel/preset-typescript": "^7.10.4",
-		"@purtuga/esm-webpack-plugin": "^1.2.1",
-		"@tensorflow/tfjs": "^2.3.0",
-		"@tensorflow/tfjs-node": "^2.3.0",
-		"@types/jasmine": "^3.5.14",
-		"@types/lodash": "^4.14.161",
-		"@types/node": "^14.6.3",
-		"@types/pbf": "^3.0.2",
-		"@types/xregexp": "^4.3.0",
-		"copy-webpack-plugin": "^6.1.0",
-		"jasmine-core": "~3.6.0",
-		"karma": "^5.2.1",
-		"karma-jasmine": "^4.0.1",
-		"karma-phantomjs-launcher": "1.0.4",
-		"karma-webpack": "4.0.2",
-		"source-map-loader": "1.1.0",
-		"ts-loader": "^8.0.3",
-		"tslint": "^6.1.3",
-		"tslint-webpack-plugin": "^2.1.0",
-		"typescript": "^3.9.7",
-		"webpack": "^4.44.1",
-		"webpack-cli": "3.3.12",
-		"webpack-dev-server": "^3.11.0",
-		"webpack-node-externals": "^2.5.2",
-		"webpack-preprocessor-loader": "git+https://github.com/Ramzeus/webpack-preprocessor-loader.git"
-	},
 	"files": [
 		"dist/*"
 	],
+	"source": "src/index.ts",
+	"devDependencies": {
+		"@tensorflow/tfjs-node": "^3.0.0",
+		"@types/lodash": "^4.14.168",
+		"@types/node": "^14.14.27",
+		"@types/pbf": "^3.0.2",
+		"@types/xregexp": "^4.3.0",
+		"esbuild": "^0.8.51",
+		"tslint": "^6.1.3",
+		"typescript": "^4.1.5"
+	},
 	"dependencies": {
+		"@tensorflow/tfjs": "^3.0.0",
 		"downsample": "^1.3.0",
 		"lodash": "^4.17.20",
-		"mem": "^6.1.1",
-		"mnemonist": "^0.38.0",
+		"mnemonist": "^0.38.1",
 		"pbf": "^3.2.1",
-		"xregexp": "^4.3.0",
+		"xregexp": "^5.0.1",
 		"xxhash-wasm": "^0.4.0"
 	}
 }
