--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,10 @@
 		"declaration": true,
 		"experimentalDecorators": true,
 		"lib": [
-			"es2018",
+			"ES2020",
 			"dom"
 		],
-		"module": "ES2015",
+		"module": "ES2020",
 		"moduleResolution": "node",
 		"noFallthroughCasesInSwitch": true,
 		"noImplicitAny": true,
@@ -17,15 +17,19 @@
 		"noImplicitThis": true,
 		"noUnusedLocals": false,
 		"noUnusedParameters": false,
-		"outDir": "./dist",
+		"outDir": "dist",
 		"preserveConstEnums": true,
 		"removeComments": true,
+		"rootDir": "src",
 		"skipLibCheck": true,
 		"sourceMap": true,
-		"target": "es2015"
+		"target": "ES2020"
 	},
 	"exclude": [
 		"node_modules"
+	],
+	"files": [
+		"src/index.ts"
 	],
 	"include": [
 		"src/"
